--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
   "version": "1.1.0",
   "dependencies": {
     "angular": "~1.4.7",
-    "angulartics": "~0.20.1",
+    "angulartics": "~1.0.2",
     "angulartics-google-analytics": "~0.1.1",
     "angular-animate": "~1.4.7",
     "angular-bootstrap": "~0.14.3",
@@ -24,7 +24,8 @@
     "ngstorage": "~0.3.9",
     "xpull": "*",
     "underscore": "~1.8.3",
-    "angularUtils-pagination": "angular-utils-pagination#~0.9.3"
+    "angularUtils-pagination": "angular-utils-pagination#~0.9.3",
+    "angular-chart.js": "~0.8.8"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.7"
