Replaced links and references to the homepage with the cooler version

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "The ultimate companion for Destiny's Trials of Osiris.",
   "version": "1.1.0",
   "license": "Artistic-2.0",
-  "homepage": "http://www.destinytrialsreport.com/",
+  "homepage": "http://www.trials.report/",
   "author": "https://github.com/DestinyTrialsReport/DestinyTrialsReport/graphs/contributors",
   "repository": {
     "type": "git",
