--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "devDependencies": {
     "autoprefixer": "~6.3.0",
-    "grunt": "~0.4.5",
+    "grunt": "^0.4.5",
     "grunt-angular-templates": "~0.5.9",
     "grunt-build-control": "~0.6.2",
     "grunt-concurrent": "~2.1.0",
