--- a/bower.json
+++ b/bower.json
@@ -28,7 +28,8 @@
     "underscore": "~1.8.3",
     "angularUtils-pagination": "angular-utils-pagination#~0.9.3",
     "angular-chart.js": "~0.8.8",
-    "xpull": "*"
+    "xpull": "*",
+    "angular-translate": "~2.11.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.8"
