--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,8 @@
     "angularUtils-pagination": "angular-utils-pagination#~0.9.3",
     "angular-chart.js": "~0.8.8",
     "xpull": "*",
-    "angular-translate": "~2.11.0"
+    "angular-translate": "~2.11.0",
+    "oclazyload": "^1.0.9"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.8"
