--- a/bower.json
+++ b/bower.json
@@ -30,7 +30,8 @@
     "angular-chart.js": "~0.8.8",
     "xpull": "*",
     "angular-translate": "~2.11.0",
-    "oclazyload": "^1.0.9"
+    "oclazyload": "^1.0.9",
+    "angular-translate-loader-static-files": "^2.11.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.8"
