--- a/bower.json
+++ b/bower.json
@@ -31,7 +31,10 @@
     "xpull": "*",
     "angular-translate": "~2.11.0",
     "oclazyload": "^1.0.9",
-    "angular-translate-loader-static-files": "^2.11.0"
+    "angular-translate-loader-static-files": "^2.11.0",
+    "angular-dynamic-locale": "^0.1.30",
+    "angular-i18n": "^1.5.3",
+    "angular-translate-handler-log": "^2.11.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.8"
