--- a/package.json
+++ b/package.json
@@ -49,5 +49,8 @@
     "sqlite3": "~3.1.1",
     "time-grunt": "~1.3.0",
     "unzip": "~0.1.11"
+  },
+  "dependencies": {
+    "angular-chart.js": "^1.0.2"
   }
 }
