angular update, fix controls this/last week text

--- a/bower.json
+++ b/bower.json
@@ -4,38 +4,38 @@
   "appPath": "app",
   "version": "1.1.0",
   "dependencies": {
-    "angular": "~1.4.8",
+    "angular": "~1.5.8",
     "angulartics": "~1.0.3",
     "angulartics-google-analytics": "~0.1.4",
-    "angular-animate": "~1.4.8",
+    "angular-animate": "~1.5.8",
     "angular-bootstrap": "~0.14.3",
-    "angular-dynamic-locale": "^0.1.30",
+    "angular-chart.js": "~1.0.2",
+    "angular-dynamic-locale": "~0.1.30",
     "angular-i18n": "^1.5.3",
     "angular-loading-bar": "~0.8.0",
-    "angular-moment": "~0.10.3",
+    "angular-moment": "~1.0.0",
     "angular-motion": "~0.4.3",
-    "angular-route": "~1.4.8",
-    "angular-sanitize": "~1.4.8",
+    "angular-route": "~1.5.8",
+    "angular-sanitize": "~1.5.8",
     "angular-strap": "~2.3.6",
     "angular-toastr": "~1.6.0",
-    "angular-touch": "~1.4.8",
-    "angular-translate": "~2.11.0",
-    "angular-translate-handler-log": "^2.11.0",
-    "angular-translate-loader-static-files": "^2.11.0",
+    "angular-touch": "~1.5.8",
+    "angular-translate": "~2.12.1",
+    "angular-translate-handler-log": "~2.12.1",
+    "angular-translate-loader-static-files": "~2.12.1",
     "angular-utils-pagination": "~0.9.4",
     "arrive": "~2.3.0",
     "bootstrap": "~3.3.6",
     "bootstrap-additions": "~0.3.1",
     "bootstrap-material-design": "~0.3.0",
-    "moment": "~2.10.6",
+    "moment": "~2.15.1",
     "moment-timezone": "~0.5.0",
     "ngstorage": "~0.3.10",
     "underscore": "~1.8.3",
-    "xpull": "*",
-    "angular-chart.js": "^1.0.2"
+    "xpull": "*"
   },
   "devDependencies": {
-    "angular-mocks": "~1.4.8"
+    "angular-mocks": "~1.5.8"
   },
   "overrides": {
     "bootstrap": {
